BugFix-Name not showing. LogOut Button not working

--- a/public/main.css
+++ b/public/main.css
@@ -102,3 +102,10 @@ body, html {
         font-size: large;
     }
 }
+
+.main{
+    display: flex;
+    justify-content: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: x-large;
+}
